--- a/EfDropBoxMedia/ListModule/View/Cell/CellView/ListCell.xib
+++ b/EfDropBoxMedia/ListModule/View/Cell/CellView/ListCell.xib
@@ -11,25 +11,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="idListCell" rowHeight="130" id="KGk-i7-Jjw" customClass="ListCell" customModule="EfDropBoxMedia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="idListCell" rowHeight="230" id="KGk-i7-Jjw" customClass="ListCell" customModule="EfDropBoxMedia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="230"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="230"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFC-Ed-PWR">
-                        <rect key="frame" x="8" y="8" width="304" height="114"/>
+                        <rect key="frame" x="8" y="8" width="304" height="205"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zyf-ez-pEn">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="70"/>
+                                <rect key="frame" x="52" y="8" width="200" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="Tk2-uZ-HOE"/>
-                                    <constraint firstAttribute="height" constant="70" id="UwQ-q1-oYr"/>
+                                    <constraint firstAttribute="width" constant="200" id="Tk2-uZ-HOE"/>
+                                    <constraint firstAttribute="height" constant="150" id="UwQ-q1-oYr"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ry-Ad-URJ">
-                                <rect key="frame" x="16" y="85" width="272" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ry-Ad-URJ">
+                                <rect key="frame" x="16" y="174" width="272" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -37,12 +37,12 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstItem="9Ry-Ad-URJ" firstAttribute="leading" secondItem="YFC-Ed-PWR" secondAttribute="leading" constant="16" id="2zp-jB-qvj"/>
-                            <constraint firstAttribute="trailing" secondItem="9Ry-Ad-URJ" secondAttribute="trailing" constant="16" id="U2r-W7-sH6"/>
-                            <constraint firstAttribute="bottom" secondItem="9Ry-Ad-URJ" secondAttribute="bottom" constant="8" id="ZuH-0g-f5F"/>
-                            <constraint firstAttribute="height" constant="114" id="lsX-Tv-DJg"/>
-                            <constraint firstItem="zyf-ez-pEn" firstAttribute="leading" secondItem="YFC-Ed-PWR" secondAttribute="leading" id="pq2-Mc-TLJ"/>
-                            <constraint firstItem="zyf-ez-pEn" firstAttribute="top" secondItem="YFC-Ed-PWR" secondAttribute="top" id="xiG-x2-zYB"/>
+                            <constraint firstAttribute="trailing" secondItem="9Ry-Ad-URJ" secondAttribute="trailing" constant="16" id="7h7-eI-xlW"/>
+                            <constraint firstAttribute="height" constant="205" id="C2e-iD-r5I"/>
+                            <constraint firstItem="9Ry-Ad-URJ" firstAttribute="leading" secondItem="YFC-Ed-PWR" secondAttribute="leading" constant="16" id="XEq-6j-Lj3"/>
+                            <constraint firstItem="zyf-ez-pEn" firstAttribute="top" secondItem="YFC-Ed-PWR" secondAttribute="top" constant="8" id="Yeu-GD-ad3"/>
+                            <constraint firstItem="zyf-ez-pEn" firstAttribute="centerX" secondItem="YFC-Ed-PWR" secondAttribute="centerX" id="tYW-rf-bWr"/>
+                            <constraint firstItem="9Ry-Ad-URJ" firstAttribute="top" secondItem="zyf-ez-pEn" secondAttribute="bottom" constant="16" id="tZ5-Qh-c2B"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -58,8 +58,9 @@
                 <outlet property="containerView" destination="YFC-Ed-PWR" id="Cgt-IV-nj8"/>
                 <outlet property="mediaImage" destination="zyf-ez-pEn" id="223-IG-qrp"/>
                 <outlet property="nameLabel" destination="9Ry-Ad-URJ" id="Iqz-Ph-EKU"/>
+                <outlet property="widthImage" destination="Tk2-uZ-HOE" id="Kjz-p0-mSn"/>
             </connections>
-            <point key="canvasLocation" x="106.87022900763358" y="50"/>
+            <point key="canvasLocation" x="106.87022900763358" y="85.211267605633807"/>
         </tableViewCell>
     </objects>
     <resources>
