--- a/EfDropBoxMedia/Modules/LoginModule/View/LoginViewController.xib
+++ b/EfDropBoxMedia/Modules/LoginModule/View/LoginViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="EfDropBoxMedia" customModuleProvider="target">
             <connections>
+                <outlet property="logiButton" destination="lrD-8z-GfU" id="onb-gx-qyf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,10 +21,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lrD-8z-GfU">
-                    <rect key="frame" x="96.666666666666686" y="573" width="200" height="45"/>
-                    <color key="backgroundColor" systemColor="systemMintColor"/>
+                    <rect key="frame" x="71.666666666666686" y="573" width="250" height="45"/>
+                    <color key="backgroundColor" systemColor="tintColor"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="200" id="SXG-88-Vnp"/>
+                        <constraint firstAttribute="width" constant="250" id="SXG-88-Vnp"/>
                         <constraint firstAttribute="height" constant="45" id="XnI-lI-dpm"/>
                     </constraints>
                     <state key="normal" title="Button"/>
@@ -34,22 +35,29 @@
                         <action selector="didTapLoginButton:" destination="-1" eventType="touchUpInside" id="MXj-fY-RGC"/>
                     </connections>
                 </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="0Gi-OR-de8">
+                    <rect key="frame" x="96.666666666666686" y="209" width="200" height="200"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="btB-QM-Dqp"/>
+                        <constraint firstAttribute="height" constant="200" id="weI-sL-fcA"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemGray6Color"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="lrD-8z-GfU" secondAttribute="bottom" constant="200" id="Fic-SK-qVx"/>
                 <constraint firstItem="lrD-8z-GfU" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="VmV-EU-MzJ"/>
+                <constraint firstItem="0Gi-OR-de8" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="e8a-4B-3Es"/>
+                <constraint firstItem="0Gi-OR-de8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="150" id="qLk-lQ-3ZH"/>
             </constraints>
             <point key="canvasLocation" x="68" y="20"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemMintColor">
-            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="logo" width="276" height="224"/>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
